# llm-inference-api

./: .env.example  .gitignore  API.md  CHANGELOG.md  DELIVERY-dashboard-mega-app-2026-06-18.md  Dockerfile  LICENSE  OPERATOR.md  README.md  ROADMAP-best-in-class.md  docker-compose.yml  install.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  tests.yml
.hermes-backups/: config.py.20260617204859  dashboard.css.20260617204859  dashboard.html.20260617204859  dashboard.js.20260617204859  main.py.20260617204859  schemas.py.20260617204859
app/: __init__.py  main.py
app/config/: __init__.py
app/core/: exceptions.py  logging.py
app/middleware/: auth.py  metrics.py  rate_limit.py  security.py
app/models/: schemas.py
app/routes/: export_pdf_csv.py
app/schemas/: __init__.py  chat.py  completion.py  generate.py  models.py
app/services/: comfyui.py  ollama.py  security.py  usage.py
app/static/css/: admin.css  dashboard.css
app/static/js/: admin.js  apva.js  dashboard.js  epic.js  (+2 more)
app/templates/: admin.html  dashboard.html  landing.html
app/utils/: auth.py
app/webhooks/: stripe.py  validators.py
deploy/d1/: schema.sql
deploy/frontend/: index.html
deploy/workers/: wrangler.toml
docs/: MODUS_OPERANDI.md  PRODUCTIZATION_BACKLOG.md  WORKSTATION_OP_ARTIFACTS.txt
llm_inference_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: dashboard-smoke-playwright.js  dashboardctl.sh  install.sh  screenshot-gallery.js  verify.sh
tests/: conftest.py  test_endpoints.py  test_excellence_gates.py  test_roadmap.py
(+7 files in other folders)
